--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/product_service
-#spring.datasource.url=jdbc:mysql://localhost:3306/sys?useSSL=false
+spring.h2.console.enabled=true
 
+logging.level.root=info 
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl = false
+
+
+spring.liquibase.change-log=classpath:db/liquibase/liquibase-changelog.xml
