--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,9 @@ spring.liquibase.change-log=classpath:db/liquibase/liquibase-changelog.xml
 
 product.review.url = http://localhost:8086/products/{productId}/reviews
 
-#spring.application.name=product-service
-#eureka.client.service-url.default-zone=http://localhost:8761
+spring.application.name=product-service
+eureka.client.service-url.default-zone=http://localhost:8761
+
+feign.review.url = http://product-review
+
+feign.hystrix.enabled=true
